--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>portfolio site</title>
+<title>hey wobbie</title>
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/foundation.min.css">
 <link rel="stylesheet" href="css/foundation.css">
+<link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -13,14 +14,12 @@
         <div class="large-12 columns">
           <div class="nav-bar right">
            <ul class="button-group">
-             <li><a href="#" class="button">home</a></li>
-             <li><a href="#" class="button">work</a></li>
-             <li><a href="#" class="button">profile</a></li>
-             <li><a href="#" class="button">contact</a></li>
+             <li><a href="portfolio.html" class="button">work</a></li>
+             <li><a href="#" class="button">about</a></li>
+             <li><a href="contact.html" class="button">contact</a></li>
             </ul>
           </div>
-          <h1>Name/Logo/Brand</h1>
-          <hr/>
+          <h1><a href="#">Logo</a></h1>
         </div>
       </div>
 
@@ -34,7 +33,7 @@
         <hr>
         <div class="large-12 columns text-center">
           <h4>About</h4>
-          <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
+          <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump <a href="portfolio.html">corned beef</a>.</p>
         </div>
       </div>
 
@@ -51,7 +50,6 @@
                   <li><a href="#">Link 1</a></li>
                   <li><a href="#">Link 2</a></li>
                   <li><a href="#">Link 3</a></li>
-                  <li><a href="#">Link 4</a></li>
                 </ul>
               </div>
             </div>
