about me / contact
created an about me page and a fixed my contact page to work.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="nav-bar right">
            <ul class="button-group">
              <li><a href="portfolio.html" class="button">work</a></li>
-             <li><a href="#" class="button">about</a></li>
+             <li><a href="about.html" class="button">about</a></li>
              <li><a href="contact.html" class="button">contact</a></li>
             </ul>
           </div>
