--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
           <div class="nav-bar right">
            <ul class="button-group">
              <li><a href="#" class="button">work</a></li>
-             <li><a href="#" class="button">about</a></li>
+             <li><a href="about.html" class="button">about</a></li>
              <li><a href="contact.html" class="button">contact</a></li>
             </ul>
           </div>
@@ -31,7 +31,7 @@
         <div class="small-12 medium-3 large-3 columns">
           <div class="panel">
           	<p>
-            	<img data-interchange="[http://placehold.it/500x300, (default)], [http://placehold.it/220x300, (large)]">
+            	<img data-interchange="[http://placehold.it/470x300, (default)], [http://placehold.it/220x300, (medium)]">
             </p>
           </div>
         </div>
@@ -45,7 +45,7 @@
         <div class="small-12 medium-3 large-3 columns">
           <div class="panel">
             <p>
-            	<img data-interchange="[http://placehold.it/500x300, (default)], [http://placehold.it/220x300, (large)]">
+            	<img data-interchange="[http://placehold.it/470x300, (default)], [http://placehold.it/220x300, (medium)]">
             </p>
           </div>
         </div>
@@ -84,7 +84,7 @@
         <div class="small-12 medium-3 large-3 columns">
           <div class="panel">
           	<p>
-          		<img data-interchange="[http://placehold.it/500x300, (default)], [http://placehold.it/220x300, (large)]">
+          		<img data-interchange="[http://placehold.it/470x300, (default)], [http://placehold.it/220x300, (medium)]">
             </p>
           </div>
         </div>
@@ -98,7 +98,7 @@
         <div class="small-12 medium-3 large-3 columns">
           <div class="panel">
             <p>
-            	<img data-interchange="[http://placehold.it/500x300, (default)], [http://placehold.it/220x300, (large)]">
+            	<img data-interchange="[http://placehold.it/470x300, (default)], [http://placehold.it/220x300, (medium)]">
             </p>
           </div>
         </div>
