--- a/project-1.html
+++ b/project-1.html
@@ -19,18 +19,31 @@
         <li><a href="contact.html" class="button">contact</a></li>
       </ul>
     </div>
-    <h1><a href="#">Logo</a></h1>
+    <h1><a href="index.html">Logo</a></h1>
   </div>
 </div>
+<h1 class="text-center">project name</h1>
 <div class="row">
-  <div class="large-12 columns"> <img src="http://placehold.it/1000x500&text=hey wobbie" alt=""> </div>
+  <div class="small-12 medium-8 columns"> <img src="http://placehold.it/700x400&text=img 1"> </div>
+  <div class="small-12 medium-4 columns"> <img src="http://placehold.it/500x300&text=img 2"> </div>
+  <br />
+  <div class="small-12 medium-4 columns"> <img src="http://placehold.it/500x300&text=img 3"> </div>
 </div>
 <div class="row">
   <hr>
-  <div class="large-12 columns text-center">
-    <h1>Welcome</h1>
-    <blockquote>Welcome to Hey Wobbie, the graphic design portfolio website for me Robert Taylor! To check out my work click <a href="portfolio.html">here</a>!</blockquote>
+  <div class="small-12 medium-4 columns">
+    <h3>Audience</h3>
+    <p>lorem ipsum</p>
+    <h3>Differentiators</h3>
+    <p>lorem ipsum</p>
+    <h3>Challenges</h3>
+    <p>lorem ipsum</p>
   </div>
+  <div class="small-12 medium-8 columns">
+    <h2>about this project</h2>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. </p>
+  </div>
+  <div class="large-12 columns text-center"> </div>
 </div>
 <footer class="row">
   <div class="large-12 columns"> <br>
