--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <div class="row">
-  <div class="large-12 columns">
+  <div class="columns">
     <div class="nav-bar right">
       <ul class="button-group">
         <li><a href="portfolio.html" class="button">work</a></li>
@@ -19,21 +19,21 @@
         <li><a href="contact.html" class="button">contact</a></li>
       </ul>
     </div>
-    <h1><a href="#">Logo</a></h1>
+    <h1 class="small-1"><a href="#">Logo</a></h1>
   </div>
 </div>
 <div class="row">
-  <div class="large-12 columns"> <img src="http://placehold.it/1000x500&text=hey wobbie" alt=""> </div>
+  <div class="columns"> <img src="http://placehold.it/1000x500&amp;text=heywobbie" alt=""> </div>
 </div>
 <div class="row">
   <hr>
-  <div class="large-12 columns text-center">
+  <div class="columns text-center">
     <h1>Welcome</h1>
-    <blockquote>Welcome to Hey Wobbie, the graphic design portfolio website for me Robert Taylor! To check out my work click <a href="portfolio.html">here</a>!</blockquote>
+    <blockquote>Welcome to Hey Wobbie, the graphic design portfolio website for me Robert Taylor&#33; To check out my work click <a href="portfolio.html">here</a>&#33;</blockquote>
   </div>
 </div>
 <footer class="row">
-  <div class="large-12 columns"> <br>
+  <div class="columns"> <br>
     <br>
     <div class="row">
       <div class="small-4 columns">
@@ -45,7 +45,7 @@
         </ul>
       </div>
       <div class="small-3 left columns">
-        <p>&copy; Robert Taylor 2015</p>
+        <small>&copy; Robert Taylor 2015</small>
       </div>
       <div>
         <ul class="inline-list right">
