--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 
 <body>
 <div class="row">
-  <div class="large-12 columns">
+  <div class="columns">
     <div class="nav-bar right">
       <ul class="button-group">
         <li><a href="#" class="button">work</a></li>
@@ -24,58 +24,58 @@
   </div>
 </div>
 <div class="row">
-  <div class="small-12 medium-3 large-3 columns">
+  <div class=" medium-3 columns">
     <div class="panel">
-      <p> <a href="project-1.html"><img data-interchange="[http://placehold.it/470x300, (default)], [http://placehold.it/220x300, (medium)]" class="portimg"></a> </p>
+      <a href="project-1.html"><img data-interchange="[http://placehold.it/470x300, (default)], [http://placehold.it/220x300, (medium)]" alt="" class="portimg"></a><p>project description</p>
     </div>
   </div>
-  <div class="small-12 medium-6 large-6 columns">
+  <div class="medium-6 columns">
     <div class="panel">
-      <p> <a href="project-1.html"><img src="http://placehold.it/470x300" class="portimg"></a> </p>
+      <a href="project-1.html"><img src="http://placehold.it/470x300" alt="" class="portimg"></a><p>project description</p>
     </div>
   </div>
-  <div class="small-12 medium-3 large-3 columns">
+  <div class="medium-3 columns">
     <div class="panel">
-      <p> <a href="project-1.html"><img data-interchange="[http://placehold.it/470x300, (default)], [http://placehold.it/220x300, (medium)]" class="portimg"></a> </p>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="small-12 medium-4 large-4 columns">
-    <div class="panel">
-      <p> <a href="project-1.html"><img src="http://placehold.it/400x300" class="portimg"></a> </p>
-    </div>
-  </div>
-  <div class="small-12 medium-4 large-4 columns">
-    <div class="panel">
-      <p> <a href="project-1.html"><img src="http://placehold.it/400x300" class="portimg"></a> </p>
-    </div>
-  </div>
-  <div class="small-12 medium-4 large-4 columns">
-    <div class="panel">
-      <p> <a href="project-1.html"><img src="http://placehold.it/400x300" class="portimg"></a> </p>
+      <a href="project-1.html"><img data-interchange="[http://placehold.it/470x300, (default)], [http://placehold.it/220x300, (medium)]" alt="" class="portimg"></a><p>project description</p>
     </div>
   </div>
 </div>
 <div class="row">
-  <div class="small-12 medium-3 large-3 columns">
+  <div class="medium-4 columns">
     <div class="panel">
-      <p> <a href="project-1.html"><img data-interchange="[http://placehold.it/470x300, (default)], [http://placehold.it/220x300, (medium)]" class="portimg"></a> </p>
+      <a href="project-1.html"><img src="http://placehold.it/400x300" alt="" class="portimg"></a><p>project description</p>
     </div>
   </div>
-  <div class="small-12 medium-6 large-6 columns">
+  <div class="medium-4 columns">
     <div class="panel">
-      <p> <a href="project-1.html"><img src="http://placehold.it/470x300" class="portimg"></a> </p>
+      <a href="project-1.html"><img src="http://placehold.it/400x300" alt="" class="portimg"></a><p>project description</p>
     </div>
   </div>
-  <div class="small-12 medium-3 large-3 columns">
+  <div class="medium-4 columns">
     <div class="panel">
-      <p> <a href="project-1.html"><img data-interchange="[http://placehold.it/470x300, (default)], [http://placehold.it/220x300, (medium)]" class="portimg"></a> </p>
+      <a href="project-1.html"><img src="http://placehold.it/400x300" alt="" class="portimg"></a><p>project description</p>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="medium-3 columns">
+    <div class="panel">
+      <a href="project-1.html"><img data-interchange="[http://placehold.it/470x300, (default)], [http://placehold.it/220x300, (medium)]" alt="" class="portimg"></a><p>project description</p>
+    </div>
+  </div>
+  <div class="medium-6 columns">
+    <div class="panel">
+      <a href="project-1.html"><img src="http://placehold.it/470x300" alt="" class="portimg"></a><p>project description</p>
+    </div>
+  </div>
+  <div class="medium-3 columns">
+    <div class="panel">
+      <a href="project-1.html"><img data-interchange="[http://placehold.it/470x300, (default)], [http://placehold.it/220x300, (medium)]" alt="" class="portimg"></a><p>project description</p>
     </div>
   </div>
 </div>
 <footer class="row">
-  <div class="large-12 columns"> <br>
+  <div class="columns"> <br>
     <br>
     <div class="row">
       <div class="small-4 columns">
@@ -87,7 +87,7 @@
         </ul>
       </div>
       <div class="small-3 left columns">
-        <p>&copy; Robert Taylor 2015</p>
+        <small>&copy; Robert Taylor 2015</small>
       </div>
       <div>
         <ul class="inline-list right">
