--- a/project-1.html
+++ b/project-1.html
@@ -11,7 +11,7 @@
 
 <body>
 <div class="row">
-  <div class="large-12 columns">
+  <div class="columns">
     <div class="nav-bar right">
       <ul class="button-group">
         <li><a href="portfolio.html" class="button">work</a></li>
@@ -24,14 +24,14 @@
 </div>
 <h1 class="text-center">project name</h1>
 <div class="row">
-  <div class="small-12 medium-8 columns"> <img src="http://placehold.it/700x400&text=img 1"> </div>
-  <div class="small-12 medium-4 columns"> <img src="http://placehold.it/500x300&text=img 2"> </div>
+  <div class="medium-8 columns"> <img src="http://placehold.it/700x400&amp;text=img1" alt=""> </div>
+  <div class="medium-4 columns"> <img src="http://placehold.it/500x300&amp;text=img2" alt=""> </div>
   <br />
-  <div class="small-12 medium-4 columns"> <img src="http://placehold.it/500x300&text=img 3"> </div>
+  <div class="medium-4 columns"> <img src="http://placehold.it/500x300&amp;text=img3" alt=""> </div>
 </div>
 <div class="row">
   <hr>
-  <div class="small-12 medium-4 columns">
+  <div class="medium-4 columns">
     <h3>Audience</h3>
     <p>lorem ipsum</p>
     <h3>Differentiators</h3>
@@ -39,14 +39,14 @@
     <h3>Challenges</h3>
     <p>lorem ipsum</p>
   </div>
-  <div class="small-12 medium-8 columns">
+  <div class="medium-8 columns">
     <h2>about this project</h2>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. </p>
   </div>
-  <div class="large-12 columns text-center"> </div>
+  <div class="columns text-center"> </div>
 </div>
 <footer class="row">
-  <div class="large-12 columns"> <br>
+  <div class="columns"> <br>
     <br>
     <div class="row">
       <div class="small-4 columns">
@@ -58,7 +58,7 @@
         </ul>
       </div>
       <div class="small-3 left columns">
-        <p>&copy; Robert Taylor 2015</p>
+        <small>&copy; Robert Taylor 2015</small>
       </div>
       <div>
         <ul class="inline-list right">
