--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 <title>A Nice &amp; Simple Contact Form</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="css/contact form.css" />
+<link rel="stylesheet" type="text/css" href="css/contact-form.css" />
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/foundation.min.css">
 <link rel="stylesheet" href="css/foundation.css">
@@ -12,7 +12,7 @@
 
 <body>
 <div class="row">
-  <div class="large-12 columns">
+  <div class="columns">
     <div class="nav-bar right">
       <ul class="button-group">
         <li><a href="portfolio.html" class="button">work</a></li>
@@ -25,12 +25,12 @@
   </div>
 </div>
 <div class="row">
-  <div class="large-12 columns">
+  <div class="small-11 medium-12 columns">
     <div class="large-8 columns">
       <h1>Get in Touch!</h1>
       <p>We'd love to hear from you. You can either reach out to us as a whole and one of our awesome team members will get back to you, or if you have a specific question reach out to one of our staff. We love getting email all day <em>all day</em>.</p>
       <div id="contact-area">
-        <form method="post" action="php/contactengine.php">
+        <form method="post" action="php/contactengine.php" class="small-10">
           <input type="text" name="Name" id="Name" placeholder="name" />
           <input type="text" name="Email" id="Email" placeholder="email"/>
           <textarea name="Message" rows="20" cols="20" id="Message" placeholder="message"></textarea>
@@ -42,11 +42,11 @@
     <div class="large-3 columns">
       <p>
       <h2>social media</h2>
-      <a href=""><img src="http://placehold.it/90x90" class="social-media"></a> <a href=""><img src="http://placehold.it/90x90" class="social-media"></a> <a href=""><img src="http://placehold.it/90x90" class="social-media"></a> </div>
+      <a href=""><img src="http://placehold.it/90x90" alt="" class="social-media"></a> <a href=""><img src="http://placehold.it/90x90" alt="" class="social-media"></a> <a href=""><img src="http://placehold.it/90x90" alt="" class="social-media"></a> </div>
   </div>
 </div>
 <footer class="row">
-  <div class="large-12 columns"> <br>
+  <div class="columns"> <br>
     <br>
     <div class="row">
       <div class="small-4 columns">
@@ -58,7 +58,7 @@
         </ul>
       </div>
       <div class="small-3 left columns">
-        <p>&copy; Robert Taylor 2015</p>
+        <small>&copy; Robert Taylor 2015</small>
       </div>
       <div>
         <ul class="inline-list right">
