--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <li><a href="#" class="button">contact</a></li>
       </ul>
     </div>
-    <h1><a href="index.html">Logo</a></h1>
+    <h1 class="small-1"><a href="index.html">Logo</a></h1>
     <hr/>
   </div>
 </div>
