--- a/project-1.html
+++ b/project-1.html
@@ -19,7 +19,7 @@
         <li><a href="contact.html" class="button">contact</a></li>
       </ul>
     </div>
-    <h1><a href="index.html">Logo</a></h1>
+    <h1 class="small-1"><a href="index.html">Logo</a></h1>
   </div>
 </div>
 <h1 class="text-center">project name</h1>
