page titles and typeface
I connected the typeface from typekit to my local host as well as my
domain name. I have also given each page an appropriate title.

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>A Nice &amp; Simple Contact Form</title>
+<title>wobbie | contact</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" type="text/css" href="css/contact-form.css" />
 <link rel="stylesheet" href="css/normalize.css">
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body class="tk-brandon-grotesque">
 <div class="row">
   <div class="columns">
     <div class="nav-bar right">
