--- a/portfolio.html
+++ b/portfolio.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>hey wobbie | portfolio</title>
+<title>wobbie | portfolio</title>
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/foundation.min.css">
 <link rel="stylesheet" href="css/foundation.css">
 <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body class="tk-brandon-grotesque">
 <div class="row">
   <div class="columns">
     <div class="nav-bar right">
