--- a/project-1.html
+++ b/project-1.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body class="tk-brandon-grotesque">
 <div class="row">
   <div class="columns">
     <div class="nav-bar right">
