--- a/about.html
+++ b/about.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>wobbie | about me</title>
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/foundation.min.css">
 <link rel="stylesheet" href="css/foundation.css">
 <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body class="tk-brandon-grotesque">
 	<div class="row">
         <div class="large-12 columns">
           <div class="nav-bar right">
