errors and such
final validation.

--- a/portfolio.html
+++ b/portfolio.html
@@ -91,9 +91,9 @@
       </div>
       <div>
         <ul class="inline-list right">
-          <li> <a href=""><img src="http://placehold.it/25x25" alt="facebook"></a> </li>
-          <li> <a href=""><img src="http://placehold.it/25x25" alt="twitter"></a> </li>
-          <li> <a href=""><img src="http://placehold.it/25x25" alt="twitter"></a> </li>
+          <li> <a href="https://www.facebook.com/"><img src="http://placehold.it/25x25" alt="facebook"></a> </li>
+          <li> <a href="https://www.twitter.com/"><img src="http://placehold.it/25x25" alt="twitter"></a> </li>
+          <li> <a href="https://www.instagram.com/"><img src="http://placehold.it/25x25" alt="instagram"></a> </li>
         </ul>
       </div>
     </div>
@@ -103,9 +103,14 @@
 <!-- typeface /brandon grotesque/--> 
 <script src="https://use.typekit.net/pns4uwu.js"></script> 
 <script>try{Typekit.load({ async: true });}catch(e){}</script> 
-<script src="js/vendor/jquery.js"></script> 
-<script src="js/foundation/foundation.js"></script> 
-<script src="js/foundation/foundation.interchange.js"></script> 
+<script src="js/jquery.js"></script> 
+<script src="js/foundation.js"></script> 
+<script src="js/foundation.interchange.js"></script>
+<script src="js/foundation.dropdown.js"></script>
+<script src="js/foundation.reveal.js"></script>
+<script src="js/fastclick.js"></script>  
+<script src="js/foundation.min.js"></script> 
+<script src="js/modernizr.js"></script>
 <!-- Other JS plugins can be included here --> 
 
 <script>
