--- a/about.html
+++ b/about.html
@@ -27,11 +27,10 @@
   <hr>
 </div>
 <div class="row">
-  <div class="small-12 medium-6 large-5 columns">
-    <div class="headshot"> <img src="http://placehold.it/500x500&amp;text=img1" alt=""> </div>
+  <div class="small-12 medium-5 columns">
+    <div> <img src="imgs/headshot.jpg" alt="robert taylor's face" class="headshot"> </div>
   </div>
-  <div class="small-0 medium-1 columns"> <img src="http://placehold.it/5x435" alt=""> </div>
-  <div class="small-12 medium-6 large-6 columns">
+  <div class="small-12 medium-6 columns">
     <div>
       <p>Hello&#33; My name is Robert Taylor and I am an emerging designer based in Lincoln, Nebraska. I am a recent graduate from the Graphic Design | Media Arts program at Southeast Community College and through my education I have studied modern and historical design theory and practices. While I am proud of what I have done with this knowledge as a designer, I know that design never stops, and I am eager to continue learning and growing&#33;</p>
       <p>As a designer, I love building pieces from the ground up and find that I am most passionate about projects that I can leave a personal touch on. I enjoy working in print, and think Design should be accessible to anyone. As a designer I want to make work that is relatable and engaging.</p>
@@ -71,8 +70,6 @@
 <script src="js/jquery.js"></script> 
 <script src="js/foundation.js"></script> 
 <script src="js/foundation.interchange.js"></script>
-<script src="js/foundation.dropdown.js"></script>
-<script src="js/foundation.reveal.js"></script>
 <script src="js/fastclick.js"></script>  
 <script src="js/foundation.min.js"></script> 
 <script src="js/modernizr.js"></script> 
