project pages and links
yup

--- a/project-4.html
+++ b/project-4.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>wobbie | home</title>
+<title>hey wobbie</title>
+<link rel="stylesheet" type="text/css" href="css/contact-form.css" />
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/foundation.min.css">
 <link rel="stylesheet" href="css/foundation.css">
 <link rel="stylesheet" href="css/main.css">
 <script src="js/responsive-nav.js"></script>
+</head>
 
 <body class="tk-brandon-grotesque">
 <header>
@@ -16,56 +18,32 @@
         <ul>
           <li class="menu-item tk-brandon-grotesque"><a href="contact.html">Contact</a></li>
           <li class="menu-item tk-brandon-grotesque"><a href="about.html">About</a></li>
-          <li class="menu-item active tk-brandon-grotesque"><a href="#" id="nav-hilite">Home</a></li>
+          <li class="menu-item active tk-brandon-grotesque"><a href="index.html" id="nav-hilite">Home</a></li>
         </ul>
       </nav>
     </header>
-    
-    
-<div class="row row-margin-bottom">
-  <div class="columns text-center">
-    <h1 class="tk-brandon-grotesque">Welcome</h1>
-    <blockquote>Welcome to Hey Wobbie, the graphic design portfolio website for me Robert Taylor&#33; Please check out my work below.</blockquote>
-    <hr>
-  </div>
-</div>
-  
+<h1 class="text-center tk-brandon-grotesque">Heart zine</h1>
 <div class="row">
-  <div class="medium-6 columns">
-    <div class="panel">
-      <a href="project-1.html"><img src="imgs/gucci-large.jpg" alt="gucci salt and pepper thumbnail" class="portimg"></a><p class="white">gucci salt and pepper</p><p>package design</p>
-    </div>
-  </div>
-  <div class=" medium-3 columns">
-    <div class="panel">
-      <a href="project-2.html"><img data-interchange="[imgs/blet-preview-large.jpg, (default)], [imgs/blet-preview-small.jpg, (medium)]" alt="" class="portimg"></a><p class="white">blet</p><p>promotional design</p>
-    </div>
-  </div>
-  <div class="medium-3 columns">
-    <div class="panel">
-      <a href="project-3.html"><img data-interchange="[imgs/pan-preview-large.jpg, (default)], [imgs/pan-preview-small.jpg, (medium)]" alt="" class="portimg"></a><p class="white">post and nickel</p><p class="white">logo/identity system</p>
-    </div>
-  </div>
+  <div class="medium-8 columns"> <img src="http://placehold.it/700x400&amp;text=img1" alt=""> </div>
+  <div class="medium-4 columns"> <img src="http://placehold.it/500x300&amp;text=img2" alt=""> </div>
+  <br />
+  <div class="medium-4 columns"> <img src="http://placehold.it/500x300&amp;text=img3" alt=""> </div>
 </div>
-
-
-
 <div class="row">
-  <div class="medium-3 columns">
-    <div class="panel">
-      <a href="project-4.html"><img data-interchange="[imgs/heart-preview-small.jpg, (default)], [imgs/heart-preview-large.jpg, (medium)]" alt="" class="portimg"></a><p>heart</p><p>print heavy publication</p>
-    </div>
+  <hr>
+  <div class="medium-4 columns">
+    <h3 class="tk-brandon-grotesque">Audience</h3>
+    <p>lorem ipsum</p>
+    <h3 class="tk-brandon-grotesque">Differentiators</h3>
+    <p>lorem ipsum</p>
+    <h3 class="tk-brandon-grotesque">Challenges</h3>
+    <p>lorem ipsum</p>
   </div>
-  <div class="medium-6 columns">
-    <div class="panel">
-      <a href="project-5.html"><img src="imgs/gomez-preview-large.jpg" alt="" class="portimg"></a><p>gomez art supply</p><p>web design</p>
-    </div>
+  <div class="medium-8 columns">
+    <h2 class="tk-brandon-grotesque">about this project</h2>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. </p>
   </div>
-  <div class="medium-3 columns">
-    <div class="panel">
-      <a href="project-6.html"><img data-interchange="[imgs/fred-preview-large.jpg, (default)], [imgs/fred-preview-small.jpg, (medium)]" alt="" class="portimg"></a><p>Sheldon Art Gallery</p><p> print design</p>
-    </div>
-  </div>
+  <div class="columns text-center"> </div>
 </div>
 <footer class="footer-distributed">
   <div class="footer-right">
@@ -104,9 +82,9 @@
         <!-- end twitter logo --> 
     </a> </div>
   <div class="footer-left">
-    <p class="footer-links"> <a href="#">home</a> <a href="about.html">about</a> <a href="contact.html">contact</a> </p>
+    <p class="footer-links"> <a href="index.html">home</a> <a href="about.html">about</a> <a href="contact.html">contact</a> </p>
   </div>
-</footer>
+</footer>s
 
 <!-- typeface /brandon grotesque/--> 
 <script src="https://use.typekit.net/pns4uwu.js"></script> 
