--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
 <title>wobbie | contact</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css/contact-form.css" />
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/foundation.min.css">
