--- a/project-3.html
+++ b/project-3.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>hey wobbie</title>
 <link rel="stylesheet" type="text/css" href="css/contact-form.css" />
 <link rel="stylesheet" href="css/normalize.css">
